# multi-agent-fake-news-detector

./: .env.example  .gitignore  README.md  RESEARCH_NOTES.md  pyproject.toml
docs/assets/: README.md
examples/: news.csv
src/mafnd/: __init__.py  cli.py  detector.py  models.py  providers.py
tests/: test_cli.py  test_detector.py
